k8s/keycloak/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: keycloak
   namespace: keycloak
   labels:
      app: keycloak
spec:
   serviceName: "keycloak"
   replicas: 1
   selector:
      matchLabels:
         app: keycloak
   template:
      metadata:
         labels:
            app: keycloak
      spec:
         containers:
         -  name: keycloak
            image: quay.io/keycloak/keycloak:23.0.5
            args: ["start"]
            ports:
              - name: http
                containerPort: 8080
            volumeMounts:
              - name: themes
                mountPath: /opt/keycloak/themes
            readinessProbe:
              httpGet:
                path: /realms/master
                port: 8080    
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
              -  containerPort: 5432
            volumeMounts:
              - name: keycloak-postgres-pv-main
                mountPath: /var/lib/postgresql/data
         volumes:
           - name: themes
             emptyDir: {}

   volumeClaimTemplates: 
   - metadata:
       name: keycloak-postgres-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
