k8s/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: keycloak
